welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:5: error: '(' expected but identifier found.
for k <- 1 to 7 {
    ^Runner:14: error: illegal start of simple expression
	}
        ^